# xArm-Python-SDK

./: .gitignore  LICENSE  README.md  README.rst  ReleaseNotes.md  Surgery_MustRead  mnist1-ce-sgd-3.pt  mnist1-crossentropy-adam.pt  modify-record.txt  pressure_sensor.ino  pyproject.toml  readme.txt  requirements.txt  setup.py  surgeryFile_MUSTREAD
.github/workflows/: python-publish.yml
birds_eye_view/: hough-ransac.tar
computer_vision/: Makefile  README.md  requirements.txt
computer_vision/birds_eye_view/: arm_test.py  circle.py  gizzmos.py  requirements.txt
computer_vision/depth_perception/: OD_cfg.pickle  test.py  utils.py
computer_vision/number_detection/: Contrast.py  Contrast2.py  README.md  batch_augmentation.py  crop_tool.py  data_augmentation.py  digit_recognition.py  digit_recognition_01_26_2024  mnist1-ce-sgd-3.pt  num_reader.py  number_detection.py  parallelPrefix.py  prefixMin.c  requirements.txt  test-crop.py  test-number-detection.py  test_crop.py  test_model.py  test_number_detection.py  tuning2.py  tuning_model.py
doc/: UF_ModbusTCP_Manual.md
doc/api/: xarm_api.html  xarm_api.md  xarm_api_code.md
doc/tool/: gen_api.py  markdown_doc.py
example/core/: main.py  main_example1.py
example/test/: debug.py  test.py
example/wrapper/: 0000-template.py  0001-connect_with_serial.py  0002-connect_with_socket.py  0003-event_register.py  0004-handle_error_warn.py  0005-get_property.py  0006-get.py  0007-servo_attach_detach.py  020-get.py  (+46 more)
number_detection/: OCR.py  README.md  digit_recognition_sequential.py  random_gaussian_1.pt  test.py
pcr/: Dockerfile  Makefile  arm_test.py  gizzmos.py  main.py  mypy_types.py  requirements.txt  test.py  test_inputs.json
xarm/: __init__.py  build_backend.py  version.py
(+294 files in other folders)
